--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,10 @@
 
 en:
+  helpers:
+    submit:
+      movie:
+        create: Add to Collection
+
   project:
     name: Your Movie DataBase
     short_name: YMDB
@@ -15,3 +20,6 @@ en:
   dashboard:
     no_movies_yet: You have no Movies yet
     add_movies_now: "Add them Now!"
+
+  movies:
+    created_successfully: "Movie added to collection"
