Allow to remove pictures

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,6 @@ en:
     title_index: Your movie collection
     title_new: Add movie to collection
     title_edit: Update movie details
+
+  pictures:
+    remove: Remove
